src/components/ColorBlock/colorblock.module.css
.colorBlock {
  width: 275px;
  height: 80dvh;
  display: flex;
  align-items: center;
  justify-content: center;

  button {
    padding: 10px 16px;
    background: #fff;
    cursor: pointer;
    border: none;
    border-radius: 3px;
    transition: background .2s;
    outline: none;

    &:hover {
      background: #ccc;
    }
  }

  .blockContent {
    display: flex;
    flex-direction: column;
    gap: 6px;
    min-width: 100px;

    h3 {
      font-size: 1.4rem;
    }
  }
}

@media (width <= 835px) {
  .colorBlock {
    width: 100%;
    height: 115px;
  }
}

